--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="ManageWalla.App"
+             xmlns:walla="clr-namespace:ManageWalla"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Main.xaml">
     <Application.Resources>
 
+        <!-- <ObjectDataProvider x:Name="uploadImagefileListName" x:Key="uploadImagefileListKey" ObjectType="{x:Type walla:UploadImageFileList}" /> -->
+        
         <Style x:Key="styleButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#FFE6D4D4" />
             <Setter Property="Margin" Value="4" />
@@ -17,7 +20,6 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-
 
         <Style x:Key="styleToggleButton" TargetType="{x:Type ToggleButton}">
             <Setter Property="Background" Value="#FFE6D4D4" />
@@ -68,6 +70,8 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        
+
+
+
     </Application.Resources>
 </Application>
