--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -71,7 +71,10 @@
             </Style.Triggers>
         </Style>
 
-
+        <Style x:Key="styleCheckbox" TargetType="{x:Type CheckBox}" >
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
 
     </Application.Resources>
 </Application>
