--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -1,12 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ManageWalla"
-                    xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">
+                    xmlns:local="clr-namespace:ManageWalla">
+                    <!--xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">-->
 
     <local:UploadImageFileList x:Key="uploadImagefileListKey" />
     <local:UploadUIState x:Key="uploadUIStateKey"  />
-
-
 
     <ControlTemplate x:Key="templateButton" TargetType="{x:Type Button}">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -103,12 +101,9 @@
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="IsChecked" Value="True" />
             </Trigger>
-            
-            
+
         </ControlTemplate.Triggers>
     </ControlTemplate>
-
-    <!--  -->
 
     <Style x:Key="TagListStyle" TargetType="{x:Type ListBox}">
         <Setter Property="Padding" Value="0" />
@@ -129,13 +124,9 @@
     </Style>
 
     <Style x:Key="TagListItem" TargetType="{x:Type ListBoxItem}">
-        <Setter Property="MaxHeight" Value="60" />
-        <Setter Property="MinHeight" Value="30" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="BorderBrush" Value="#FF6C8DD0" />
-        <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Margin" Value="3" />
+        <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="0" />
     </Style>
 
@@ -171,7 +162,8 @@
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
+                        <DropShadowEffect />
+                        <!--<ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />-->
                     </Setter.Value>
                 </Setter>
             </Trigger>
@@ -180,7 +172,8 @@
                 <Setter Property="BorderBrush" Value="Black" />
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
+                        <DropShadowEffect />
+                        <!--<ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />-->
                     </Setter.Value>
                 </Setter>
             </Trigger>
@@ -188,8 +181,9 @@
             <Trigger Property="IsEnabled" Value="false">
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />
-                    </Setter.Value>
+                        <DropShadowEffect />
+                        <!--<ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />-->
+                    </Setter.Value>                    
                 </Setter>             
             </Trigger>
 
