--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -59,6 +59,41 @@
             </Style.Triggers>
         </Style>
 
+        <Style x:Key="TagListStyle" TargetType="{x:Type ListBox}">
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBox}">
+                        <ScrollViewer 
+								VerticalScrollBarVisibility="Auto" 
+								HorizontalScrollBarVisibility="Disabled">
+                            <WrapPanel 
+									IsItemsHost="True" 
+									Orientation="Horizontal" />
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="TagListItem" TargetType="{x:Type ListBoxItem}">
+            <Setter Property="Background" Value="#FFE6D4D4" />
+            <Setter Property="Margin" Value="4" />
+            <Setter Property="Padding" Value="4" />
+            <Setter Property="Foreground" Value="#FFB82F5A" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+                <Trigger Property="IsSelected" Value="true">
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="Background" Value="#FFF3ECEC" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="styleImageThumb" TargetType="{x:Type Image}" >
             <Setter Property="Margin" Value="4" />
             <Setter Property="Stretch" Value="None" />
