--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ManageWalla">
-                    <!--xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">-->
+                    xmlns:local="clr-namespace:ManageWalla"
+                    xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">
 
     <local:UploadImageFileList x:Key="uploadImagefileListKey" />
     <local:UploadUIState x:Key="uploadUIStateKey"  />
@@ -105,30 +105,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-    <Style x:Key="TagListStyle" TargetType="{x:Type ListBox}">
-        <Setter Property="Padding" Value="0" />
-        <Setter Property="Margin" Value="0" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListBox}">
-                    <ScrollViewer 
-								VerticalScrollBarVisibility="Auto" 
-								HorizontalScrollBarVisibility="Disabled">
-                        <WrapPanel 
-									IsItemsHost="True" 
-									Orientation="Horizontal" />
-                    </ScrollViewer>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
 
-    <Style x:Key="TagListItem" TargetType="{x:Type ListBoxItem}">
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="0" />
-        <Setter Property="Padding" Value="0" />
-    </Style>
 
     <Style x:Key="PhotoListStyle" TargetType="{x:Type ListBox}">
         <Setter Property="Padding" Value="0" />
@@ -162,8 +139,7 @@
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <DropShadowEffect />
-                        <!--<ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />-->
+                        <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
                     </Setter.Value>
                 </Setter>
             </Trigger>
@@ -172,8 +148,7 @@
                 <Setter Property="BorderBrush" Value="Black" />
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <DropShadowEffect />
-                        <!--<ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />-->
+                        <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
                     </Setter.Value>
                 </Setter>
             </Trigger>
@@ -181,8 +156,7 @@
             <Trigger Property="IsEnabled" Value="false">
                 <Setter Property="Effect">
                     <Setter.Value>
-                        <DropShadowEffect />
-                        <!--<ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />-->
+                        <ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />
                     </Setter.Value>                    
                 </Setter>             
             </Trigger>
