--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -126,6 +126,7 @@
     </Style>
 
     <Style x:Key="PhotoListItem" TargetType="{x:Type ListBoxItem}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="MaxHeight" Value="100" />
         <Setter Property="MinHeight" Value="100" />
         <Setter Property="VerticalAlignment" Value="Center" />
@@ -154,6 +155,7 @@
             </Trigger>
 
             <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="BorderBrush" Value="Pink" />
                 <Setter Property="Effect">
                     <Setter.Value>
                         <ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />
